# rate-stocker

./: Cargo.toml  LICENSE  Makefile.toml  README.md  rate-stocker.yaml  rust-toolchain.toml
.devcontainer/: Dockerfile  db.env  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: code-build-deployment.yml  dependabot-auto-merge.yml
api-lib/: README.md
api-lib/api/: openapi.yaml
api-lib/docs/: ErrorResponse.md  Rate.md  rate_api.md
api-lib/examples/client/: main.rs
api-lib/examples/server/: server.rs
api-lib/src/: lib.rs  models.rs
api-lib/src/server/: mod.rs
api_server/: Cargo.toml  Dockerfile
api_server/src/: main.rs  server.rs
fetcher/: Cargo.toml  Dockerfile
fetcher/src/: models.rs
lib/: Cargo.toml
lib/src/: datetime.rs  lib.rs
migrations/2024-03-07-113305_create_rate_types/: down.sql  up.sql
migrations/2024-03-07-115314_create_daily_rates/: down.sql  up.sql
migrator/: Dockerfile  diesel.toml
openapi_client/: Cargo.toml  README.md
openapi_client/.openapi-generator/: FILES
openapi_client/api/: openapi.yaml
openapi_client/docs/: ErrorResponse.md  GetRatesResponse.md  Pair.md  Rate.md  rate_api.md
openapi_client/examples/client/: main.rs
openapi_client/examples/server/: server.rs
openapi_client/src/: lib.rs  models.rs
openapi_client/src/client/: mod.rs
openapi_client/src/server/: mod.rs
production/docker/fetcher/: Dockerfile
production/docker/migrator/: Dockerfile
production/k8s/fetcher/: fetcher-cronjob.yaml
production/k8s/mariadb/: mariadb-deployment.yaml  mariadb-pv.yaml  mariadb-service.yaml
production/k8s/migrator/: migrator-job.yaml
production/k8s/namespaces/: rate-stocker-namespace.yaml
production/k8s/secrets/: mariadb-secret.yaml
src/: lib.rs  main.rs  schema.rs
