[package]
name = "rate_stocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coincheck_rust = {git = "https://github.com/canpok1/coincheck-rust.git"}
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"