[workspace]
members = [
  "api_server",
  "fetcher",
  "lib",
  "openapi_client",
]

[workspace.dependencies]
bigdecimal = "0.4"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.5.3", features = ["derive"] }
coincheck_rust = {git = "https://github.com/canpok1/coincheck-rust.git"}
diesel = { version = "2.2.0", features = ["mysql", "chrono", "numeric"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
