[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi_client = { path = "../openapi_client", features = ["server"] }

async-trait = "0.1.24"
chrono = { workspace = true }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
log = "0.4.0"
mime = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.17", features = ["derive"] }

# Common between server and client features
hyper = {version = "0.14", features = ["full"]}
serde_ignored = {version = "0.1.1"}
url = {version = "2.1"}

env_logger = "0.11"
tokio = { workspace = true }
native-tls = "0.2"