[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi_client = { path = "../openapi_client", features = ["server"] }
async-trait = "0.1.80"
chrono = { workspace = true }
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
log = "0.4.0"
hyper = {version = "0.14", features = ["full"]}
serde_ignored = {version = "0.1.1"}
env_logger = "0.11"
tokio = { workspace = true }
lib = { path = "../lib" }
bigdecimal = { workspace = true }