[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.5.2", features = ["derive"] }
coincheck_rust = {git = "https://github.com/canpok1/coincheck-rust.git"}
diesel = { version = "2.1.0", features = ["mysql", "chrono", "numeric"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
